# pizzaDAO-app

./: .gitignore  Cargo.toml  README.md
contracts/faucet/: Cargo.toml
contracts/faucet/src/: lib.rs  test.rs
contracts/faucet/test_snapshots/test/: test_admin_functions.1.json  test_claim_without_shares.1.json  test_comprehensive_faucet_flow.1.json  test_faucet_claim_availability.1.json  test_faucet_initialization.1.json  test_faucet_pool_integration_basic.1.json  test_faucet_query_functions.1.json  test_faucet_with_liquidity_deposit.1.json  test_invalid_faucet_amount_update.1.json  test_multiple_users_independent_claims.1.json  test_non_admin_cannot_change_settings.1.json
contracts/increment/src/: test.rs
contracts/liquidity_pool/: Cargo.toml
contracts/liquidity_pool/src/: lib.rs
docs/: buildstructure.md
frontend/: .gitignore  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: AdCard.tsx  ConfirmationScreen.tsx  ExchangeScreen.tsx  LoginScreen.tsx  QRScannerModal.tsx  Spinner.tsx
frontend/components/icons/: ArrowRightIcon.tsx  BeverageIcon.tsx  CameraIcon.tsx  CheckIcon.tsx  FloorTokenIcon.tsx  LogoutIcon.tsx  PencilIcon.tsx  PizzaSliceIcon.tsx  QuestionMarkIcon.tsx  SoroswapIcon.tsx  SparklesIcon.tsx  UserIcon.tsx  WearableTokenIcon.tsx  XMarkIcon.tsx
