[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
#soroban-sdk = "23.0.0-rc.2.4"
soroban-sdk = "22.0.8"
num-integer = { version = "0.1.46", default-features = false, features = ["i128"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

#[patch.crates-io]
#num-integer = { path = "/path/to/your/num-integer" } # Replace with the actual path if it's local
#num-traits = { path = "/path/to/your/num-traits" } # Same here, if it's local
#num-traits = { features = [], default-features = false }
